--- a/Chapitre2.tex
+++ b/Chapitre2.tex
@@ -64,7 +64,7 @@ Les artères se caractérisent par une média épaisse. Les artérioles, elles, 
 %%%
 %%%
 \subsubsection{Données quantitatives}
-Les données quantitatives relatives à la {\em longueur} et au {\em diamètre} sont sujettes à de fortes variabilités individuelles, comme on l'a vu précédemment pour la structure du polygone de Willis. Dans notre travail, nous nous fixerons comme objectif de les reconstruire pour chaque sujet. Cependant, à titre de référence, le projet {\bf BraVa}, pour {\em The Brain Vasculature}, fournit une base de données relatives à l'architecture artérielle dans le cerveau (\cite{Wright2013}). Pour construire cette base, 61 patients (âge 31.16 $\pm$10.03) ont subit une imagerie IRM par temps de vol (résolution 0.6 x 0.6 x 0.6mm$^3$) . Pour chaque sujet, une identification manuelle des artères a été réalisée via ImageJ et le plugin Neuron\_Morpho (\cite{neuronmorpho}). Ainsi une identification fine du nombre de segments et de leurs caractéristiques (longueur, tortuosité etc.) est disponible et mis à disposition en ligne. Cette base nous renseigne entre autre sur le nombre de branches du système artériel et les longueurs moyennes. Ainsi le système artériel tel qu'identifié par BraVa consiste en moyenne chez les sujets en 208.56 branches pour des longueurs allant de 27 à 43 mm avec une valeur moyenne à 34.18 mm.\\
+Les données quantitatives relatives à la {\em longueur} et au {\em diamètre} sont sujettes à de fortes variabilités individuelles, comme on l'a vu précédemment pour la structure du polygone de Willis. Dans notre travail, nous nous fixerons comme objectif de les reconstruire pour chaque sujet. Cependant, à titre de référence, le projet {\em BraVa}, pour {\em The Brain Vasculature}, fournit une base de données relatives à l'architecture artérielle dans le cerveau (\cite{Wright2013}). Pour construire cette base, 61 patients (âge 31.16 $\pm$10.03) ont subit une imagerie IRM par temps de vol (résolution 0.6 x 0.6 x 0.6mm$^3$) . Pour chaque sujet, une identification manuelle des artères a été réalisée via ImageJ et le plugin Neuron\_Morpho (\cite{neuronmorpho}). Ainsi une identification fine du nombre de segments et de leurs caractéristiques (longueur, tortuosité etc.) est disponible et mis à disposition en ligne. Cette base nous renseigne entre autre sur le nombre de branches du système artériel et les longueurs moyennes. Ainsi le système artériel tel qu'identifié par BraVa consiste en moyenne chez les sujets en 208.56 branches pour des longueurs allant de 27 à 43 mm avec une valeur moyenne à 34.18 mm.\\
 Le tableau~\ref{tab:databrava} récapitule les données issues de ce travail de morphologie quantitative pertinentes pour nous. Les longueurs des {\em artères cérébrales antérieures}, {\em artères cérébrales moyennes} et {\em artères cérébrales postérieures} sont disponibles (branches {\em droites} et {\em gauches}) pour chacun des 61 sujets. L'ampleur de la variabilité individuelle en termes de longueurs de ces artères renforce clairement la volonté de construire une modélisation sujet-spécifique. Ces données permettent tout de même de disposer d'{\em ordres de grandeur} permettant de vérifier la pertinence de nos segmentations.
 %%%
 \begin{table}
@@ -103,7 +103,7 @@ Les capillaires représentent des réseaux denses avec une densité de longueur 
 Ces données fournissent une description géométrique quantitative cohérente de la structure des capillaires. Pour chaque mm$^3$, on a 500 mm de capillaires, ce qui pour une diamètre typique inférieur a 10 $\mu$m, donne bien un volume inférieur à 5\%. et une surface de 10 mm$^2$ d'échange. Structuralement, si on suppose une organisation réticulée, cubique pour simplifier les calculs, on aboutit pour une longueur moyenne d'un capillaire de 50 $\mu$m à un réseau de 20 unités de coté, soit du point de vue hydrodynamique 400 tubes de 10 $\mu$m de diamètre en parallèle. Ces chiffres, quoique aproximatifs, donneront des ordres de grandeur pour les valeurs des résistances à préciser ultérieurement dans le modèle. \\
 Du point de vue microstructural, les capillaires ne présentent pas de tissu conjonctif périvasculaire, remplacé par les prolongements astrocytaires. On peut noter la présence de jonctions serrées réunissant les cellules endothéliales, et d’un équipement enzymatique riche et parfois spécifique. Les capillaires permettent de fournir les nutriments et le dioxygène aux tissus. Ils jouent un rôle important dans le contrôle du passage des molécules : les macromolécules ne franchissent pas la barrière hématotissulaire tandis que pour les petites molécules la perméabilité est identique à celle de la membrane cellulaire. Ils permettent le passage libre des molécules lipophiles mais requierent l’utilisation de transporteurs membranaires, parfois spécifiques, pour les molécules hydrophiles. Enfin ils assurent le contrôle du passage des cellules, en le réduisant au renouvellement lent mais constant des cellules microgliales par des précurseurs dérivant de la moelle osseuse.\\
 \subsection{Veines}
-L'union de plusieurs capillaires donne des {\em veinules} qui elles-mêmes se déversent dans des {\em veines} de diamètre croissant. Habituellement on classe les veines en fonction de leur taille. Dans l'espèce humaine, les petites veines ont un diamètre compris entre 50 $\mu$m et 1 mm; les veines moyennes ont un diamètre compris entre 1 mm et 10 mm et les larges veines ont plus d'un centimètre de diamètre. Les veinules ont le même aspect que les capillaires, mais leur diamètre est supérieur (inférieur à 50$\mu$m) \textcolor{red}{ref : Anatomy and Physiology’ 2007 Ed.2007 Edition.}.\\
+L'union de plusieurs capillaires donne des {\em veinules} qui elles-mêmes se déversent dans des {\em veines} de diamètre croissant. Habituellement on classe les veines en fonction de leur taille. Dans l'espèce humaine, les petites veines ont un diamètre compris entre 50 $\mu$m et 1 mm; les veines moyennes ont un diamètre compris entre 1 mm et 10 mm et les larges veines ont plus d'un centimètre de diamètre. Les veinules ont le même aspect que les capillaires, mais leur diamètre est supérieur (inférieur à 50$\mu$m - \cite{Martini2009}).\\
 Comme les capillaires, les veinules interviennent dans les échanges métaboliques. Leur principale caractéristique est leur sensibilité aux agents inflammatoires qui augmentent leur perméabilité, ce qui permet la diffusion du plasma et le passage de protéines de haut poids moléculaire. Ces agents favorisent aussi l'adhérence des leucocytes aux parois vasculaires et leur diapédèse (intercalation entre les cellules endothéliales) , en ralentissant le flux sanguin. Les veines enfin disposent d’une structure similaire aux artères mais avec une lumière plus grande, une paroi plus fine avec peu d’éléments musculaires et élastiques dans la média.\\
 Le système veineux cérébral est un système interconnecté et communiquant librement, composé des {\em sinus veineux} et des {\em veines cérébrales} (\cite{Schaller2004}). Les veinules du réseau post-capillaire se regroupent en veines cheminant dans la substance blanche (veines médullaire) qui vont converger vers la surface de l'encéphale pour donner naissance à deux systèmes de veines regroupées, appelés {\em système superficiel} et {\em système profond}. Compte tenu de leur importance dans la modélisation des flux intracr\^aniens, on va en faire une description détaillée issue de~\cite{radioanatDrainage}.\\
 Le système superficiel (cortical) draine le sang du cortex et de la matière blanche sous corticale (\cite{Aydin1997}). Les veines dites superficielles ou corticales cheminent à la surface de l’encéphale et vont gagner (directement ou indirectement) par l’intermédiaire de veines collectrices plus volumineuses, un sinus veineux. Ainsi les veines corticales proches de la convexité haute se jettent directement dans le {\em sinus sagittal supérieur}, les veines des faces inférieures et latérales de l’encéphale forment des collecteurs plus volumineux (veines {\em sylviennes} en avant et latéralement, veines {\em basales} en dedans et en arrière) rejoignant soit le système profond (veines basales), soit directement un sinus.\\
@@ -129,7 +129,7 @@ Enfin, les {\em sinus veineux de la base du crâne} cheminent dans un dédoublem
 %%%
 Le {\em sinus caverneux}, situé de part et d’autre de la loge hypophysaire contre la face latérale du corps du sphénoïde, dans lequel chemine l’artère carotide interne. Le {\em sinus sphéno-pariétal de Breschet}, qui draine les veines méningées moyennes et parfois la veine sylvienne. En arrière le sinus caverneux se draine dans le {\em sinus pétreux inférieur}, cheminant dans la suture sphéno-pétreuse en haut, pétro-occipitale en bas, et rejoignant à la face inférieure de la base du crâne le golfe de la jugulaire. En arrière et latéralement, le {\em sinus pétreux supérieur}, contenu dans l’insertion pétreuse de la grande circonférence de la tente du cervelet, au niveau du bord supérieur du rocher, se termine au niveau du tiers externe de celui-ci en s’abouchant dans le sinus latéral.\\
 Contrairement aux artères où l’on observe peu de suppléance vasculaire (hors polygone de Willis), le système veineux s’anastomose beaucoup. Les sinus pétreux anastomosent la circulation veineuse antérieure et postérieure. Le sinus sagittal supérieur et la veine cérébrale moyenne s’anastomosent par la {\em grande veine anastomotique de Trolard}. La veine cérébrale moyenne avec le sinus transverse par la {\em veine anastomotique de Labbé}. Des anastomoses existent aussi entre les sinus caverneux par les sinus inter caverneux antérieur et postérieur.\\
-Du point de vue de la modélisation, les compartiments veineux seront, comme les compartiments artériels, reconstruits sur la base d'une analys morphologique sujet-spécifique. Seules les artérioles ne pourront pas être segmentées, et des hypothèses issues de la littérature être proposées pour leur longueur c et leur densité caractéristique. \textcolor{red}{On a des estimations a donner ici?}
+Du point de vue de la modélisation, les compartiments veineux seront, comme les compartiments artériels, reconstruits sur la base d'une analys morphologique sujet-spécifique. Dans ce cas, aucun travail de morphologie quantitative comparable au projet BraVa ne pourra nous fournir de référence. Comme les artérioles, les veinules ne pourront pas être segmentées, et des hypothèses issues de la littérature être proposées pour leur longueur et leur densité caractéristique.  
 \subsection{Liquide cérébro-spinal}
 Le liquide cérébro-spinal est un liquide biologique transparent dans lequel baigne le cerveau. Il est contenu dans les méninges entre la pie-mère qui recouvre le système nerveux central et l’arachnoïde qui tapisse le versant interne de la dure-mère, c’est-à-dire dans l’espace sous-arachnoïdien.\\
 Le cerveau comprend des cavités remplies de liquide céphalorachidien. Ce réseau de canaux situé à l’intérieur du cerveau forme le système ventriculaire (Figure~\ref{fig:1_6_systeme_ventriculaire}).
