--- a/Chapitre2.tex
+++ b/Chapitre2.tex
@@ -145,7 +145,7 @@ Il y a en tout quatre ventricules.\\
 Le deux premiers ventricules cérébraux, sont habituellement appelés {\em ventricules latéraux}. Ils sont situés en profondeur dans chacun des deux hémisphères cérébraux. Ils présentent une forme de fer à cheval, orientée d'arrière en avant. Chaque ventricule possède une {\em corne frontale} (en avant) située dans le lobe frontal de l'hémisphère cérébral correspondant, une branche inférieure ({\em corne temporale}, sur les côtés du cerveau), une partie postérieure appelée {\em carrefour} qui rassemble les branches inférieures et supérieures, et enfin une petite zone supplémentaire, appelée {\em corne occipitale}, qui communique avec le carrefour, et se situe dans le lobe occipital.\\
 Le {\em troisième ventricule} est situé dans le diencéphale (partie du cerveau située entre les deux hémisphères). Il communique avec les ventricules latéraux de chaque côté par le {\em trou de Monro}.\\
 Le {\em quatrième ventricule}, se situe sous le troisième, entre le cervelet, et le tronc cérébral. Ce ventricule communique avec le troisième ventricule par l'{\em aqueduc de Sylvius}, et avec la surface de l'encéphale, par trois orifices qui sont le {\em trou de Magendie} et les deux {\em trous de Luschka}. Enfin, ce ventricule communique avec le reste de la moelle épinière par l'intermédiaire d'un canal allant du bas du ventricule vers le canal de l'épendyme situé au centre de la moelle épinière.
-Les ventricules représentent 2\% du volume total du cerveau soit 37 mL (\textcolor{red}{ref : http://www.ncbi.nlm.nih.gov/pubmed/21120804 et http://www.ncbi.nlm.nih.gov/pubmed/20182051 } .
+Les ventricules représentent 2\% du volume total du cerveau soit 37 mL (\cite{Akdogan2010},~\cite{Ott2010}).
 %%%
 %%%
 %%%
