--- a/jeremythesebib.bib
+++ b/jeremythesebib.bib
@@ -2822,4 +2822,30 @@ volume = {7th},
 year = {2009}
 }
 
+@article{Akdogan2010,
+abstract = {This study has been designed to estimate the volume fraction of the brain ventricles volume to total brain volume and to correlate them with gender and age in normal subjects. Cranial computed tomography (CT) images of 80 normally evaluated subjects (five female and five male for each decade) were selected from 1,073 CT examinations. The volumes of total brain, cerebral aqueduct, fourth, third, and lateral ventricles and their ratios were estimated using the Cavalieri method and volume fraction-stereological methods. The ratio of total brain ventricle volume to total brain volume was comparable between the two genders (p > 0.05, independent t test). Mean volume fraction of total ventricle volume to total brain volume was found to be 1.21\% in the first and 3.37\% in the last decades. Mean volume fraction was found to increase significantly with age (p < 0.01, r = 0.630, Pearson). In conclusion, the mean percentage of total ventricle volume within the total brain volume was found to be 2\%. We demonstrated the volume fraction of total ventricle to total brain in normal subjects. Total ventricle volume to total brain volume fractions can be important tools in determining ventricle volumes, which denote variability in some diseases (Alzheimer, schizophrenia, neurodegenerative disorders, etc.) and can be estimated by stereological methods.},
+author = {Akdogan, I. and Kiroglu, Y. and Onur, S. and Karabulut, N.},
+issn = {00155659},
+journal = {Folia Morphologica},
+keywords = {Brain ventricles,Brain volume,Cavalieri method,Stereology,Volume fraction},
+number = {4},
+pages = {193--200},
+pmid = {21120804},
+title = {{The volume fraction of brain ventricles to total brain volume: A computed tomography stereological study}},
+volume = {69},
+year = {2010}
+}
 
+@article{Ott2010,
+abstract = {The frequent co-occurrence of Alzheimer's disease (AD) pathology in patients with normal pressure hydrocephalus suggests a possible link between ventricular dilation and AD. If enlarging ventricles serve as a marker of faulty cerebrospinal fluid (CSF) clearance mechanisms, then a relationship may be demonstrable between increasing ventricular volume and decreasing levels of amyloid-beta peptide (Abeta) in CSF in preclinical and early AD. CSF biomarker data (Abeta, tau, and phosphorylated tau) as well as direct measurements of whole brain and ventricular volumes were obtained from the Alzheimer's Disease Neuroimaging Initiative dataset. The ratio of ventricular volume to whole brain volume was derived as a secondary independent measure. Baseline data were used for the group analyses of 288 subjects classified as being either normal (n=87), having the syndrome of mild cognitive impairment (n=136), or mild AD (n=65). Linear regression models were derived for each biomarker as the dependent variable, using the MRI volume measures and age as independent variables. For controls, ventricular volume was negatively associated with CSF Abeta in APOE epsilon4 positive subjects. A different pattern was seen in AD subjects, in whom ventricular volume was negatively associated with tau, but not Abeta in epsilon4 positive subjects. Increased ventricular volume may be associated with decreased levels of CSF Abeta in preclinical AD. The basis for the apparent effect of APOE epsilon4 genotype on the relationship of ventricular volume to Abeta and tau levels is unknown, but could involve altered CSF-blood-brain barrier function during the course of disease.},
+author = {Ott, Brian R and Cohen, Ronald A and Gongvatana, Assawin and Okonkwo, Ozioma C and Johanson, Conrad E and Stopa, Edward G and Donahue, John E and Silverberg, Gerald D and {Alzheimer's Disease Neuroimaging Initiative}},
+doi = {10.3233/JAD-2010-1406},
+issn = {1875-8908},
+journal = {Journal of Alzheimer's disease : JAD},
+number = {2},
+pages = {647--657},
+pmid = {20182051},
+title = {{Brain ventricular volume and cerebrospinal fluid biomarkers of Alzheimer's disease.}},
+volume = {20},
+year = {2010}
+}
