--- a/Chapitre5.tex
+++ b/Chapitre5.tex
@@ -772,7 +772,7 @@ de la voie de compensation que représente l’artère communicante antérieure 
 Le détail de cette compensation est illustré en Figure~\ref{fig:4_22_flux_ACA} A. Comme on peut le voir, chez ce sujet l’ACoA
 est efficace puisqu’elle permet d’assurer un apport quasi-normal en sang dans l’ACA même lorsque sa
 partie amont est occluse. Ce sujet présente une ACoA de bon diamètre (2.3 mm) pouvant être définie
-comme « normale » selon Tulleken (\cite{Tulleken1978}). Des études ont montrés que le diamètre moyen de cette
+comme « normale » selon Tulleken (\cite{Tulleken1978}). Des études ont montré que le diamètre moyen de cette
 artère se situait entre 1.5 (\cite{Perlmutter1976}) et 1.92±0.86 mm (\cite{Hillen1986}). Cassot et al. (\cite{Cassot1995}) ont évalué l’effet du diamètre
 de l’ACoA lors de sténoses carotidiennes. Via un modèle dédié au polygone de Willis, ils ont pu simuler
 l’évolution des flux et des pressions en fonction du degré de sténose et du diamètre de l’ACoA. Leurs
