update segmentation arteres

--- a/Chapitre3.tex
+++ b/Chapitre3.tex
@@ -29,7 +29,26 @@ Que ce soit en imagerie par temps de vol ou en contraste de phase, les vaisseaux
 Un grand nombre d’outils de segmentation existent dédiés aux images IRM. Mais ils recherchent un but spécifique : l’extraction des différents types de tissus présents dans le cerveau, la matière grise, la matière blanche, et le liquide cérébro-spinal (voir Appendice~\ref{sec:pretrait}).  Les approches optimisées pour ce genre de segmentation ne peuvent pas être appliqué dans le cadre des vaisseaux. Pour ces derniers des approches dédiées ont été développées (\cite{Lesage2009}). Elles se décomposent toutes en deux étapes, chacune devant être optimisée : le prétraitement des images puis la segmentation elle-même.\\
 Les prétraitements consistent à simplifier les informations contenues dans les images d’angiographie IRM. Les traitements génériques disponibles entre lesquels il s’agît de faire un choix ont été développés dans d’autres contextes comme le sous-échantillonnage et la quantification (\cite{Tschirren2005}). Les outils les plus courants restent cependant les filtres améliorant la qualité de l’image. Citons les filtres gradients  (\cite{Koller1995}), les filtres morphologiques (\cite{Wilkinson2001}), ou les filtres à base de matrice Hessienne (\cite{Frangi1998}). \\
 A l’issue du prétraitement, les principaux algorithmes de segmentation utilisés dans des contextes vasculaires se regroupent en trois approches principales : la croissance de région, les contours actifs, les lignes médianes (\cite{Lesage2009}). La croissance de région segmente de façon incrémentielle un objet en recrutant les voxels adjacents selon certains critères comme par exemple la variation locale de l’intensité. Elle requiert le plus souvent la définition d’un point initial, qui peut être obtenu via un simple seuillage sur l’image (\cite{Boskamp2004}). Les contours actifs font évoluer une interface sous l’action de différentes forces : des forces externes calculées à partir des intensités de l’image, et des forces internes de type tension de lignes exprimant des contraintes a-priori la géométrie du contour et sa régularité (\cite{McInerney1996}). Les lignes médianes se focalisent sur l’extraction directe du centre des vaisseaux en utilisant des informations de plus haut niveaux telles que la localisation du centre du vaisseau, l’estimation de sa direction et de sa taille caractéristique (\cite{Aylward2002}).\\
-Les essais de comparaisons de ces différentes méthodes que nous avons réalisé sur ces différentes images nous ont amené à choisir la combinaison d’un prétraitement Hessien suivit d’un seuillage simple. Le filtre Hessien est en effet extrêmement robuste dans sa capacité à fournir une image très contrastée des vaisseaux, à partir de laquelle un simple seuillage ajusté manuellement (intervention de l’utilisateur) fournit un résultat qui rend superflu l’utilisation de méthodes de segmentation plus sophistiquées. \\
+%%%
+\begin{figure}[!t]
+\centering
+\includegraphics[width=12cm]{2_optimisation_criteres}
+\caption{Estimation du seuil optimal selon un critère qualité. La méthode de segmentation illustrée est le seuillage après filtre de Frangi. La courbe montre l'évolution du score en fonction du seuil. Par soucis de clarté le score est convertie de telle sorte à ce que le proche de zéro corresponde au paramètre optimal. Le score prend en compte la correspondance avec un squelette d'une segmentation de référence (manuelle) et sur l'écart en termes de volume entre la référence et la segmentation donnée pour les 100 premiers niveaux de coupes (zone la plus facilement segmentable). La valeur indiquée par la flèche verte est l'optimale, la jaune légèrement en dessous et l'orange au dessus. Les segmentations correspondantes sont illustrées avec les couleurs associées. En vert est indiqué le pourcentage de recouvrement de la segmentation donnée en rapport de la référence et en blanc l'écart de volume en pourcent avec la référence. Notons que pour chaque segmentation, seul les plus grosses structures sont retenues}
+\label{fig:2_optimisation_criteres}	
+\end{figure}
+%%
+Afin d'évaluer la pertinence des principales segmentations, nous avons appliqué sur trois images TOF de couvertures anatomiques différentes, différents algorithmes  (Figure~\ref{fig:2_comparaisons_segmentations}). Nous avons ainsi testé le seuillage simple, la croissance de région et le seuillage sur la base d'un filtre de Frangi (prétraitement Hessien). Pour chaque volume TOF, une segmentation manuelle validée par un neuroradiologue a été réalisée pour de servir de référence, et son squelette extrait par amincissement itératif (voir ~\ref{ss:skel}). Notons d'ailleurs que parmi les trois volumes, le premier possède une couverture anatomique proche des données BraVa. Les longueurs des différentes artères sont d'ailleurs en accord avec cette base (voir Table~\ref{tab:databrava}).Chaque méthode requiert l'ajustement de paramètres permettant l'obtention d'une segmentation de bonne qualité. En vue de les optimiser, nous avons établit un score prenant en compte 1) le pourcentage du squelette de référence inclus dans la segmentation, et 2) le rapport moyen entre le volume de la segmentation donnée et de la référence pour les 100 premiers niveaux de coupes (où les vaisseaux sont le plus facilement segmentable). La paramètres de segmentation sont définis comme optimaux lorsque le score est proche de 2 (somme des deux critères). Un exemple d'identification de ces paramètres est donné en Figure~\ref{fig:2_optimisation_criteres} sur un seuillage après filtre de Frangi.  Comme on le voit, un seuil plus faible que l'optimal permet de récupérer une plus grande partie de l'arbre artériel (67\%) mais avec une surestimation de son volume de l'ordre de 79\%. Une supérieure induit au contraire une perte d'une partie de l'arborescence (43 \%) mais affine le volume (+20\% seulement d'écart avec la référence). Le paramètre optimal assure un compromis entre couverture de l'arbre vasculaire (54\%) et volume (+41\%). On notera ainsi par ailleurs que méthode de Frangi à tendance à surestimer le volume artériel.\\
+ Les segmentations obtenues par les différentes méthodes après utilisation de ce critère qualité sont illustrées dans la Figure~\ref{fig:2_comparaisons_segmentations}. Le simple seuillage semble offrir la meilleur correspondance en terme de recouvrement de l'aborescence totale pour les trois volumes avec une moyenne de 70\%, en revanche des écarts important en termes de volume peuvent être identifiés. Ceux-ci sont principalement dû à la segmentation d'autres structures ou de bruit identifié comme du vaisseau à cause des inhomogénéités de signal. Ce phénomène se voit clairement sur les deuxième et troisièmes volumes. La croissance de région quant à elle offre des résultats mitigés avec seulement 39\% de recouvrement et une sous estimation systématique du volume (40\%). Cette sous estimation s'explique par le fait que l'algorithme requiert des points initiaux pour développer la segmentation. Selon leur localisation, la méthode segmentera plutot la périphérie du vaisseau ou son centre induisant donc une sous estimation du volume. Le seuillage d'un filtre de Frangi (prétraitement Hessien), permet de récupérer 48\%  de l'arbre vasculaire en moyenne avec une certaine constance. Contrairement au seuillage simple, il ne récupère que les vaisseaux et non le bruit. Le volume est cependant systématiquement sur-estimé. Notons que nous avons par ailleurs réalisé des essais avec un algorithme de contour actif (non illustrés ici), ceux ci mettent en évidence un temps de traitement bien plus long (en heure contre quelques minutes pour les autres) pour un résultat proche de la croissance de région (sous estimation du volume de l'ordre de 24\% et 41\% de couverture de l'arbre vasculaire pour le premier volume.\\
+%%%
+\begin{figure}[!t]
+\centering
+\includegraphics[width=15cm]{2_comparaisons_segmentations}
+\caption{Comparaison de différents algorithmes de segmentation sur 3 images par temps de vol de couverture anatomique différentes. Une segmentation manuelle a été réalisée et validé par un neuroradiologue afin de servir de référence. Trois méthodes de segmentations sont ici comparées : seuillage sur l'intensité, croissance de régions et filtre de Frangi. Pour chaque méthode les paramètres ont été ajustés automatiquement. En vert est indiqué le pourcentage de recouvrement de la segmentation donnée en rapport de la référence et en blanc l'écart de volume en pourcent avec la référence. Notons que pour chaque segmentation, seul les plus grosses structures sont retenues.}
+\label{fig:2_comparaisons_segmentations}	
+\end{figure}
+%%
+
+Au vue des résultats nous avons choisi la combinaison d’un prétraitement Hessien suivit d’un seuillage simple qui, malgré un recouvrement plus faible de l'arbre vasculaire en comparaison du seuillage simple, assure une identification des vaisseaux uniquement. Le filtre Hessien est en effet robuste dans sa capacité à fournir une image très contrastée des vaisseaux, à partir de laquelle un simple seuillage ajusté manuellement (intervention de l’utilisateur) fournit un résultat qui rend superflu l’utilisation de méthodes de segmentation plus sophistiquées. \\
 Le filtre utilisant cette méthode est dit filtre de Frangi  (\cite{Frangi1998},~\cite{Manniesing2006}). Ce filtre vise à extraire une quantité mesurant la vraisemblance pour une région d’appartenir à un vaisseau : on parle de  « vesselness » locale de l’image. L’idée est d’identifier dans l’image les structures en forme de tubes (voir Figure~\ref{fig:2_1_segmentation_arteres}).\\
 %%%
 \begin{figure}[!t]
@@ -67,6 +86,7 @@ Les volumes 3D obtenus (Figure \ref{fig:2_4_segemtation_cont_phase_tof}) reflèt
 %%%
 %%%
 \subsection{Extraction du squelette}	
+\label{ss:skel}
 La segmentation permet d’aboutir à un volume 3D représentant notre arbre vasculaire. Cependant en l’état il ne renseigne pas sur la structure du réseau. Pour identifier les différents segments et points de jonction, et réduire la quantité de données, il est indispensable d’extraire le squelette du masque et de le représenter sous forme de graphe. \\
 Le squelette est une représentation très utilisée car il contient et résume les propriétés topologiques de la forme qu’il représente. Il permet  de décrire les objets par un ensemble de lignes fines réduisant sensiblement le volume d’informations à manipuler. Le squelette est généralement défini comme étant l’ensemble des lignes médianes, c’est-à-dire l’ensemble des points équidistants de deux points de la frontière. Notons que sa construction est très sensible à la qualité de la segmentation, en particulier au bruit.  \\
 Il existe une grande variété de méthodes permettant de construire des squelettes à partir de formes données. La plus commune est la méthode dite d’extraction de la carte des distances, qui consiste à calculer en chaque point interne à l’objet, la distance à son contour le plus proche. Une fois cela réalisé, les maximums locaux de cette carte sont récupérés et forment le squelette de l’objet (Figure~\ref{fig:2_6_squelettisation}). 
