petit paragraphe veines

--- a/Chapitre3.tex
+++ b/Chapitre3.tex
@@ -74,7 +74,7 @@ Mathématiquement, on calcule la matrice Hessienne de l’image à partir de ses
 \label{fig:2_4_segemtation_cont_phase_tof}	
 \end{figure}	
 
-Comme on l’a vue dans le chapitre précédent, les images par temps de vol fournissent une information artérielle. Le contraste de phase par contre met en évidence à la fois le versant veineux et artériel. Pour segmenter les veines, l’information artérielle doit donc être éliminée des images du contraste de phase. Il est donc indispensable de segmenter en premier lieu l’imagerie par temps de vol, d’identifier les artères, et de les soustraire de l’image en contraste de phase. La même méthodologie sera ensuite appliquée sur cette image.\\
+Comme on l’a vue dans le chapitre précédent, les images par temps de vol fournissent une information artérielle. Le contraste de phase par contre met en évidence à la fois le versant veineux et artériel. Pour segmenter les veines, l’information artérielle doit donc être éliminée des images du contraste de phase. Il est donc indispensable de segmenter en premier lieu l’imagerie par temps de vol, d’identifier les artères, et de les soustraire de l’image en contraste de phase. La même méthodologie (filtre de Frangi et seuillage) sera ensuite appliquée sur cette image. En effet, les résultats sur cette imagerie sont similaires à ceux exposés dans la Figure~\ref{fig:2_comparaisons_segmentations}. Notons cependant que la croissance de région s'avère plus compliquée du fait de l'inhomogénéité du signal dans les différents types de vaisseaux.\\
 Les volumes 3D obtenus (Figure \ref{fig:2_4_segemtation_cont_phase_tof}) reflètent l’arborescence veineuse et artérielle et fournissent une base solide l’extraction des données géométriques et topologiques. De plus, l’apport de la carte de susceptibilité magnétique se fait ressentir principalement au niveau des petites veines (Figure~\ref{fig:2_5_segmentation_apport_QSM}).
 %%%
 \begin{figure}[!t]
